Adicionando testes de equals

--- a/Mensageria/UnitTest.Mensageria.Console/Test.Unit.Mensageria.Console.csproj
+++ b/Mensageria/UnitTest.Mensageria.Console/Test.Unit.Mensageria.Console.csproj
@@ -27,4 +27,8 @@
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
 	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Mensageria.Console\Mensageria.Console.csproj" />
+	</ItemGroup>
 </Project>
